Work on fixing mobile-view overflow bug

--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ body {
     justify-content: center;
     align-items: center;
     font-size: 2.5em;
-    font-family: 'Bakbak One', cursive;
+    font-family: 'Bakbak One', sans-serif;
     color: var(--marker-color);
     transition: 0.3s;
 }
@@ -253,9 +253,18 @@ a:hover {
         width: 80%;
     }
 
+    .current-turn {
+        font-size: .8em;
+        word-spacing: -3px;
+    }
+
     .game-container {
         grid-column: 1 / 1;
         grid-row: 1 / 1
+    }
+
+    .cell {
+        font-size: 1.6em;
     }
 
     .swatches-container {
@@ -272,8 +281,8 @@ a:hover {
     }
     
     .game-board {
-        width: 275px;
-        height: 275px;
+        width: 220px;
+        height: 220px;
         gap: 4px;
         border: 4px solid black;
     }
